fix nav bottom gap

--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -6,6 +6,7 @@
     box-shadow: 0 20px 80px 0 rgb(0 0 0 / 45%);
     background-size: contain;
     top: 0;
+    bottom: 0;
     left: 0;
     width: 100%;
     height: 0;
